mule-user-guide/v/3.9/web-service-consumer.adoc
=  Web服务使用者
:keywords: anypoint studio, studio, connector, endpoint, web service, soap, wsdl

使用Mule开发应用程序时，用户通常需要使用SOAP Web服务来从外部源获取数据。在最好的情况下，您可以使用Mule应用程序中现有的Anypoint Connector连接到特定的服务提供商，例如Zuora或Avalara。但是，如果不存在特定于服务的连接器以方便连接，则从Mule应用程序中使用Web服务的最快，最简单的方法是使用*Web Service Consumer*。

通过使用服务WSDL中包含的信息，该连接器使您能够配置一些细节来建立您在Mule应用程序中使用服务所需的连接。确定Web服务的WSDL文件的位置，然后要求Web服务使用者从WSDL配置自己以获取主机，端口和地址。

在Studio中存在此组件之前，您可能已经在Mule流中配置了HTTP连接器和SOAP组件，以便能够使用Web服务;现在只需将Web服务使用者连接器插入到流程中，需要较少的配置工作。

Web服务使用者还提供了额外的功能来帮助您构建应用程序：

使用DataWeave转换器，Web服务使用者利用DataSense功能来获取有关输入或输出的预期格式和结构的信息，以消除尝试找出要发送的内容的猜测，以及SOAP Web服务的内容。
* 使用DataWeave转换器，您可以将接收到的输入（SOAP标头或主体）可视化为另一种数据格式或结构，以供进一步处理。
* 使用Web服务使用者中嵌入的功能来保护您的Web服务请求，以向请求和/或WS-Security时间戳添加用户名令牌。

例如，假设您希望构建一个应用程序，您需要收集关于股票交易最后价格的信息。在接受最终用户请求之后，您需要使用一个外部SOAP Web服务来检查特定股票的最近交易和卖出的价格，然后返回响应。这样的应用程序可以使用Web服务使用者来使用股票报价信息，然后使用DataWeave将结果映射到可以返回给最终用户的格式。见下面的第一张图;下面是第二个例子。

image:first_diagram.png[带有标注的Web服务消费者工作流程]

以前称为SOAP连接器的组件现在称为 link:/mule-user-guide/v/3.9/cxf-component-reference[CXF组件]。它不应该与Web服务使用者混淆。

== 先决条件

本文档假定您熟悉SOAP，WSDL，DataWeave，Mule，Anypoint连接器，
Anypoint Studio基本要素，骡流中的元素以及全局元素。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 限制

*  Web服务使用者仅与SOAP Web服务接口，而不是REST API。
* 在Mule中，Web服务使用者仅可与以下连接器配合使用：
** 文件
**  FTP
**  HTTP
**  HTTPS
**  JMS
**  SFTP
*  Web服务使用者无法处理多部分SOAP请求。如果提交了多部分SOAP请求，则会发生此错误：`Operation Messages With More Than 1 Part Are Not Supported.`
+
以下是多部分使用不正确的示例：
+
[source,xml,linenums]
----
<soap:header message="sws:MyInput" part="header" use="literal"/>
<soap:header message="sws:MyInput" part="header2" use="literal"/>
<soap:body parts="body" use="literal"/>
----
+
要解决此问题，请修改WSDL以删除标题部分并继续使用Web服务使用者。或者，你
可以使用 link:/mule-user-guide/v/3.9/cxf-module-reference[CXF模块]来调用服务。

Web服务使用者的基本用法。== 

要在您的Mule应用程序中使用Web Service使用者，您必须执行三项任务：

. 将要使用的服务的WSDL文件添加到您的Mule项目中。
. 为您的Mule流添加一个Web服务消费者元素。
. 定义要执行的操作。
. 使用您在添加到流程中的Web服务消费者元素的属性窗口中看到的绿色加号添加连接器配置。
. 在全局Web服务使用者元素中，指定Web服务的WSDL的位置，并应用服务提供者要求的任何安全设置。要充分利用Web服务使用者的设计时功能，请考虑将其与使用变换组件的DataWeave结合使用。

有关DataWeave和DataSense的更多信息：

*  DataSense：Web服务使用者与DataSense兼容。 DataSense使用WSDL中的信息自动提取有关数据结构的元数据，并对SOAP Web服务提供或预期的格式进行格式化。启用此功能时（在Web服务消费者元素的全局配置中或在较新版本中默认情况下），服务发送或预期的数据类型很容易被发现。
DataWeave转换器：与支持DataSense的Web Service使用者结合使用时，DataWeave可以自动从服务中提取有效载荷或标题元数据，您可以通过可视界面进行映射和转换。例如，如果在应用程序中配置Web服务使用者，然后将DataWeave转换器拖拽到其后面，DataWeave将使用DataSense提取的信息预先填充输入值以进行映射，以便您只需确认（或调整）选择，然后继续映射到您想要的输出。换句话说，DataSense确保DataWeave知道它必须工作的数据格式和结构，因此您不必手动将其解决。

有关DataSense和DataWeave的最佳设计时实践的更多信息，请参阅 link:/anypoint-studio/v/6/datasense[DataSense文档]。

== 使用HTTP请求者从XML获取WSDL

在Mule 3.9及更高版本中，您可以使用XML中的useConnectorToRetrieveWsdl属性。这个属性
使用连接器配置提供的HTTP请求者来获取WSDL。 WSDL位置
必须位于HTTP或HTTPS URL位置。

例：

[source,xml,linenums]
----
<ws:consumer-config name="Web_Service_Consumer"
service="TestService" port="TestPort" serviceAddress="http://fake.com/services/Test"
wsdlLocation="http://fake.com?Wsdl"
useConnectorToRetrieveWsdl="true" />
----

==  XML的名称空间和架构

以下部分提供名称空间和模式信息。

在Studio中设计应用程序时，如果将连接器从面板拖到Anypoint Studio画布上，Studio会自动使用连接器名称空间和模式位置填充XML代码。

命名空间：`+xmlns:ws="http://www.mulesoft.org/schema/mule/ws"+` +
架构位置：`+http://www.mulesoft.org/schema/mule/ws/current/mule-ws.xsd+`

如果您在Studio的XML编辑器或其他文本编辑器中手动编码Mule应用程序，请在`<mule>`标记内的Configuration XML头中定义名称空间和模式位置。

。示例Mule应用程序标题 -  <mule>标记
[source,xml,linenums]
----
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:successfactors="http://www.mulesoft.org/schema/mule/successfactors" 
xmlns:ws="http://www.mulesoft.org/schema/mule/ws" 
xmlns="http://www.mulesoft.org/schema/mule/core" 
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.springframework.org/schema/beans 
http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core 
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/ws 
http://www.mulesoft.org/schema/mule/ws/current/mule-ws.xsd
http://www.mulesoft.org/schema/mule/successfactors 
http://www.mulesoft.org/schema/mule/successfactors/current/mule-successfactors.xsd
http://www.mulesoft.org/schema/mule/http 
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
----

== 配置Web服务使用者

要准备应用程序以使用上述示例中的Web服务，必须先将Web服务的WSDL添加到您的Mule项目中，然后至少配置Web服务使用者元素和全局Web服务所需的参数消费者元素。下面的图表和部分描述了如何解决这些要求。

image:wsc_workflow2.png[关于何时使用WS消费者和DataWeave的流程图]

=== 使用Studio Visual Editor配置WSC

. 首先获取您打算使用的SOAP Web服务的WSDL文件，或者标识WSDL的URL。您可以
还可以通过单击Studio任务栏左侧的Exchange图标从Anypoint Exchange中打开WSDL文件。
. 如果您使用的是WSDL文件，请将该文件复制到Studio项目的`src/main/resources`文件夹中。 （您可以拖放文件以将其复制到文件夹中。）如果使用URL，则不需要将任何内容复制到Studio项目。
. 将Web服务使用者连接器拖放到应用程序中的流中。单击Web服务使用者图标以打开其“属性编辑器”，然后更改连接器显示名称的默认值（如果您愿意）。
. 通过单击全局配置字段旁边的加号来定义连接器的全局配置。
. 在打开的窗口中，在WSDL位置字段中输入一个值。首先填写此字段。
+
去做这个：
+
** 点击链接*Search WSDL in Exchange*打开Anypoint Exchange并选择驻留在那里的WSDL定义。
** 在字段中输入WSDL的URL。
** 单击`...`按钮以提供您复制到项目的`src/main/resources`文件夹中的WSDL文件的文件路径和文件名。
+
填写此字段后，您可以使Studio有机会阅读WSDL的内容，并使用包含的信息自动填充剩余的空字段 -  `Service`，`Port`和`Address`在WSDL文件中。或者，您可以使用有关Web服务的相应信息手动填充这些字段。如果端口值不存在，请单击向下箭头以选择一个值。
+
image:web-service-consumer-069cc.png[wsc配置]
+
. 如果在您的Web服务使用者版本中启用DataSense框可用，请确认其框已选中，然后单击确定以保存。
. 请注意，Studio会自动填充流中Web Service使用者元素的属性编辑器中的以下字段：
+
**  *Connector Configuration*  - 使用刚刚创建的全局Web服务使用者的名称。
**  *Operation*  - 使用Web服务为其使用者支持的操作的名称。点击向下箭头选择一项操作。
+
. 如果您愿意（如果SOAP Web服务提供多个操作）定义Web服务使用者的操作，然后保存您的配置。

image:wsc_local.png[wsc_local]

[NOTE]
与CXF组件一样，您可以使用消息传输优化机制（MTOM）通过选中MTOM Enabled框或通过定义触发MTOM激活的表达式来优化SOAP消息的传输。请参阅 link:https://docs.mulesoft.com/mule-user-guide/v/3.9/using-mtom[使用MTOM]。

=== 使用XML编辑器配置WSC

配置连接器：

. 为您打算使用的SOAP Web服务获取WSDL文件，或者标识WSDL的URL。
. 如果您使用的是WSDL文件，请将该文件复制到Studio项目的`src/main/resources`文件夹中。 （您可以拖放文件以将其复制到文件夹中。）如果使用URL，则不需要将任何内容复制到Studio项目。
. 在应用程序的所有流程之上，向您的应用程序添加一个全局`ws:consumer-config`元素。根据下面的代码示例配置其属性，以定义如何连接到您打算使用的Web服务。有关元素，属性和默认值的完整列表，请参阅 link:/mule-user-guide/v/3.9/web-service-consumer-reference[Web服务消费者参考]。
+
[source, xml]
----
<ws:consumer-config name="Web_Service_Consumer1" wsdlLocation="src/main/resources/sample_wsdl_2.txt" service="StockQuoteService" port="StockQuotePort" serviceAddress="http://example.com/stockquote" doc:name="Web Service Consumer"/>
----
+
. 将`ws:consumer`元素添加到应用程序中的流程中。
+
根据下面的代码示例配置其属性，以定义要引用的全局Web服务使用者以及执行请求到Web服务的操作。有关元素，属性和默认值的完整列表，请参阅 link:/mule-user-guide/v/3.9/web-service-consumer-reference[Web服务消费者参考]。
+
[source, xml]
----
<ws:consumer doc:name="Web Service Consumer" config-ref="Web_Service_Consumer1" operation="GetLastTradePrice"/>
----

==  Web服务使用者和DataWeave

如上所述，与支持DataSense的Web Service使用者结合使用时，DataWeave会自动提取可用于通过 link:/mule-user-guide/v/3.9/dataweave[DataWeave语言]映射和/或转换为其他数据格式或结构的有效内容或标题元数据。当您在流程中配置了支持DataSense的Web服务使用者时，可以在其之前或之后放置一个DataWeave转换器 - 并且DataWeave会自动提取DataSense从WSDL收集的有关预期格式和结构的信息消息。

* 如果DataWeave *follows*完全配置了Web Service使用者，DataWeave可以访问其输入值，并且可以使用这些输入来创建自定义输出。
* 如果DataWeave *precedes*完全配置了Web Service使用者，DataWeave将创建一个支架，以生成与Web服务使用者预期接收的输出相匹配的输出（请参见下文）。

[source, json, linenums]
----
{
  "item_amount": "????",
  "payment": {
    "currency": "????",
    "installments": "????",
    "payment-type": "????"
  },
  "product": {
    "model": "????",
    "price": "????"
  },
  "salesperson": "????",
  "shop": "????"
}
----

要利用Web Service Consumer，DataSense和DataWeave，请按以下顺序配置这些元素：

. 全球Web服务消费者元素，启用了DataSense。
. 应用程序中的流中的Web Service使用者连接器，它引用Global Web Service使用者连接器。
. 转换消息（DataWeave转换器）在您的流中的Web服务使用者连接器之前或之后丢弃。

=== 添加自定义标题

通过*Property*转换器将SOAP头创建为出站属性。

[WARNING]
以`soap.`前缀开头的出站属性被视为SOAP标头，并被传输忽略。所有未用`soap.`前缀命名的属性都被视为传输标头（默认情况下，WSC使用HTTP传输）。

==== 使用Studio Visual Editor添加自定义标题

image:properties_soap.jpg[properties_soap]

==== 使用XML编辑器添加自定义标题

[source, xml]
----
<set-property propertyName="soap.myProperty" value="#[payload]" doc:name="Property"/>
----

[WARNING]
====
手动配置标题时，您传递的值应该具有XML元素的结构，并且它不应该是一对简单的键和值。例如，使用set属性元素，属性的值必须包含封闭的XML标签，如下所示：

[source, xml, linenums]
----
<set-property propertyName="soap.Authorization"
value="<auth>Bearer
MWYxMDk4ZDktNzkyOC00Z</auth>"/>
----

上面的例子工作，下面的例子没有：

[source, xml, linenums]
----
<set-property propertyName="soap.Authorization" value="Bearer
MWYxMDk4ZDktNzkyOC00Z"/>
----

====

=== 映射SOAP标题

通过Web服务使用者，DataWeave提供了通过选择不同输入来映射和转换消息的有效载荷，属性或变量的选项。

. 确保您在流程中配置了支持DataSense的Web服务使用者，并设置DataWeave转换器以遵循它。单击画布上的DataWeave图标以打开其属性编辑器。
. 如果SOAP服务返回带有标题的响应，则DataWeave转换器的输入部分中的树在其中具有多个入站属性。每个标题作为入站属性输入Mule流。您可以双击它以在不同的选项卡中打开此属性并提供测试数据。
. 在transform的输入指令中，您可以看到如何引用此输入，并在引用标题中的某个元素时将其用作路径的一部分。

[TIP]
====
使用DataWeave，您可以在单个转换中使用多个输入，因此您可以从SOAP正文和SOAP标头中获取信息以生成输出。

要生成多个输出，您必须创建单独的变换，但这些变换可以托管在流程中的单个DataWeave变换器中。因此，在单个DataWeave转换器中，您可以托管一个填充SOAP正文的变换，另一个填充SOAP标题。
====

==  Web服务使用者和DataSense资源管理器

使用Studio中的 link:/anypoint-studio/v/6/using-the-datasense-explorer[DataSense资源管理器]功能，可以在设计时洞察消息有效负载，属性和变量在整个流程中的状态。 DataSense Explorer在遇到Web服务使用者之前以及在从连接器出现之后，对理解消息的内容非常有用，以便更好地理解应用程序正在处理的数据的状态。

以下示例中的DataSense Explorer提供有关消息遇到Web Service使用者时组成消息对象的Payload，Variables，Inbound Properties和Outbound Properties的信息。使用DataSense资源管理器顶部的In-Out切换键查看消息到达或离开消息处理器时的元数据。

Web服务使用者之前的==== 消息状态

image:metadata_in.png[metadata_in]

Web服务使用者之后的==== 消息状态

image:metadata_out.png[metadata_out]

== 代理Web服务使用者

本节介绍如何在Mule应用程序中配置对SOAP服务的代理请求。让我们从这个流程开始，将国家/地区名称作为HTTP参数进行抽取，并将其存储在SOAP服务请求的变量中，以显示提供该国家/地区数据的所有城市的天气数据服务。

image:web-service-consumer-73a55.png[wsc  - 代理配置]

要将请求代理到SOAP服务，请转到Studio中的全局元素选项卡，创建一个新的HTTP请求全局元素，然后从HTTP请求配置的*Proxy*选项卡中输入代理的主机和端口详细信息。

image:web-service-consumer-04b36.png[例如代理http请求]

从*Web Service Consumer*的_global元素的*Reference*选项卡指定新创建的代理配置。

image:web-service-consumer-e8b7b.png[wsc参考选项卡]

代理配置与您的Mule应用程序中的这个XML块类似：

[source,xml,linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="www.webservicex.com" 
  port="80" doc:name="HTTP Request Configuration">
  <http:proxy host="my.example.proxy.com" port="8080"/>
</http:request-config>
----

示例流程：

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" 
xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" 
xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" 
xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" 
xmlns:ws="http://www.mulesoft.org/schema/mule/ws" 
xmlns:http="http://www.mulesoft.org/schema/mule/http" 
xmlns="http://www.mulesoft.org/schema/mule/core" 
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.springframework.org/schema/beans 
http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core 
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/ws 
http://www.mulesoft.org/schema/mule/ws/current/mule-ws.xsd
http://www.mulesoft.org/schema/mule/http 
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking 
http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/ee/dw 
http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/xml 
http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" 
    port="8082" doc:name="HTTP Listener Configuration"/>
    <ws:consumer-config name="Web_Service_Consumerweather" 
    wsdlLocation="http://www.webservicex.com/globalweather.asmx?WSDL" 
    service="GlobalWeather" 
    port="GlobalWeatherSoap" 
    serviceAddress="http://www.webservicex.com/globalweather.asmx"  
    doc:name="Web Service Consumer"/>
    <http:request-config name="HTTP_Request_Configuration" host="www.webservicex.com" 
    port="80" doc:name="HTTP Request Configuration">
        <http:proxy host="example.proxy.com" port="8080"/>
    </http:request-config>
    <flow name="soap-wsc-proxy">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/country" doc:name="HTTP"/>
        <set-variable variableName="CountryName" 
	value="#[message.inboundProperties.'http.query.params'.CountryName]" 
	doc:name="Get Cities by Country"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://www.webserviceX.NET
---
{
	ns0#GetCitiesByCountry: {
		ns0#CountryName: flowVars.CountryName as :string
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <ws:consumer config-ref="Web_Service_Consumerweather" doc:name="Web Service Consumer" operation="GetCitiesByCountry"/>
        <logger level="INFO" doc:name="Logger"/>
    </flow>
</mule>
----

== 安全地连接到SOAP Web服务

根据SOAP Web服务使用的安全级别，您可能需要相应地保护Web Service使用者发送的请求。您发送给Web服务的任何调用都必须遵守Web服务提供者的安全要求。要符合此要求，您可以在Global Web Service使用者连接器上配置安全设置。

WSC允许您：

* 为邮件添加到期日
* 将用户名和密码标题添加到外发邮件中
* 为外发邮件添加签名标题
* 验证签名标题的传入消息
* 加密传出消息（在SOAP级别）
* 解密传入消息（在SOAP级别）

=== 使用Studio Visual Editor安全连接

要安全连接：

. 在全局Web服务使用者元素的全局元素属性面板中，单击安全选项卡：
+
image:wsc_security.png[wsc_security]
+
. 根据Web服务提供商的安全要求，选择应用用户名令牌安全性或WS-Security时间戳或两者。
. 在必填字段中输入值。
+
[TIP]
--
有关元素，属性和默认值的完整列表，请参阅 link:/mule-user-guide/v/3.9/web-service-consumer-reference[Web服务消费者参考]。
--
+
. 单击确定以保存您的安全设置。

=== 使用XML编辑器安全连接

将子元素添加到您在应用程序中配置的全局ws：consumer-config元素。根据下面的代码示例配置子元素的属性。有关元素，属性和默认值的完整列表，请参阅Web Service使用者参考。

[source, xml, linenums]
----
...
    <ws:consumer-config name="OrderWS" wsdlLocation="enterprise.wsdl.xml" service="OrderService" port="Soap" serviceAddress="https://login.orderservice.com/services/Soap/c/22.0" doc:name="Web Service Consumer">
        <ws:security>
            <ws:wss-username-token username="test" password="test" passwordType="DIGEST" addCreated="true" addNonce="true"/>
            <ws:wss-timestamp expires="30000"/>
        </ws:security>
    </ws:consumer-config>
...
----


=== 验证响应时间戳

并非所有的Web服务都在响应中提供时间戳。
您需要根据您的Web服务提供商的安全要求进行验证。

您可以通过指示Mule使用`mule.ws.checkWssResponseTimestamp`属性验证响应的时间戳来确定响应的WS安全语义的新鲜度：

* 你可以在启动Mule传递下面的参数时设置它：
+
[source,Example]
----
-M-Dmule.ws.checkWssResponseTimestamp=true
----
+
* 或者您可以在您的`${MULE_HOME}/conf/wrapper.conf`文件中将其设置为包装配置：
+
[source,xml]
----
wrapper.java.additional.<n>=-mule.ws.checkWssResponseTimestamp=true
----

[TIP]
详细了解如何将JVM参数传递到您的Mule实例 link:/mule-user-guide/v/3.9/passing-additional-arguments-to-the-jvm-to-control-mule[这里]。

== 使用基本身份验证和SSL

如果您要连接的Web服务需要基本身份验证，您可以在接触到URL时轻松提供用户名和密码作为URL的一部分。

该网址应该遵循以下结构：

[source, code]
----
http://myUserName:myPassword@hostService
----

在Web服务使用者的全局元素中，添加对`http-request-config`元素的引用。

默认情况下，WSC使用者通过HTTP请求连接器的默认配置运行。如果您需要它来运行使用HTTPS的连接器的配置（或者与默认配置不同的HTTP配置），请按照以下步骤操作：

. 点击画布下方的全局元素标签，然后创建一个新的全局元素
image:global_elements1.jpg[global_elements1]

. 对于全局元素类型，请选择*HTTP Request Configuration*
+
image:http_global_element.png[http_global_element]
+
. 完成*General*选项卡（主机和端口）中的必填字段
. 然后选择*TLS/SSL*选项卡并配置与HTTPS验证，默认或自定义相关的字段。
. 在您的流中的Web服务使用者实例中，单击连接器配置旁边的绿色加号。
+
image:adding_https_ref.jpg[adding_https_ref]
+
. 在*References*选项卡中，为*Connector Ref*字段选择新创建的HTTPS全局元素。

=== 使用Studio Visual Editor配置身份验证

配置：

. 输入Web服务使用者的全局配置元素。
. 打开*References*标签。
. 通过点击绿色加号创建一个新的参考。

=== 使用XML编辑器配置身份验证

[source, xml, linenums]
----
<http:request-config host="localhost" port="${port}" name="customConfig">
        <http:basic-authentication username="user" password="pass" />
    </http:request-config>

    <ws:consumer-config wsdlLocation="Test.wsdl" service="TestService" port="TestPort" serviceAddress="http://localhost:${port}/services/Test" connectorConfig="customConfig" name="globalConfig"/>
----

默认情况下，WSC使用者通过HTTP请求连接器的默认配置运行。如果您需要它来运行使用HTTPS的连接器的配置（或者与默认配置不同的HTTP配置），请按照以下步骤操作：

. 在您的项目中添加一个 link:/mule-user-guide/v/3.9/http-connector[HTTP连接器]全局元素，并使用必要的安全属性对其进行配置
+
[source, xml, linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="example.com" 
  port="8081" protocol="HTTPS" doc:name="HTTP_Request_Configuration"/>       
        <tls:context>
            <tls:trust-store path="your_truststore_path" password="your_truststore_password"/>
            <tls:key-store path="your_keystore_path" password="your_keystore_path" keyPassword="your_keystore_keypass"/>
        </tls:context>
</http:request-config>
----
+
. 在您的`ws:consumer-config`元素中，包含`connectorConfig`属性以引用此HTTP连接器配置元素：
+
[source, xml, linenums]
----
<ws:consumer-config 
name="Web_Service_Consumer" 
wsdlLocation="tshirt.wsdl.xml" 
service="TshirtService" 
port="TshirtServicePort" 
serviceAddress="http://tshirt-service.qa2.cloudhub.io/tshirt-service" 
connectorConfig="HTTP_Request_Configuration"/>
----

=== 引用已弃用的HTTP传输

要设置备用HTTP设置，而不是引用新的HTTP连接器的实例，可以引用已弃用的HTTP传输器的实例并完成相同的操作。要添加此引用，请向WSC配置元素添加一个`connector-ref`属性。 `connectorConfig`和`connector-ref`属性是互斥的，并且都是可选的。

如果没有指定两个引用属性，则使用新的HTTP连接器的默认实例。为了向后兼容，您可以更改此行为并使不推荐使用的HTTP传输实例成为默认配置。在Mule运行时3.6中添加了全局配置属性，允许您更改此默认行为：

[source, xml, linenums]
----
<configuration>
  <http:config useTransportForUris="true"/>
</configuration> 
----

这个属性的失败价值是错误的。将此标志设置为true时，Mule会退回到不推荐使用的HTTP传输，以在未指定传输/连接器时解析URI。

== 完整的代码示例

*Visual Studio Editor View*

image:code_example.png[代码示例部分的Studio流程图]

*XML View*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:ws="http://www.mulesoft.org/schema/mule/ws" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ws http://www.mulesoft.org/schema/mule/ws/current/mule-ws.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">
<ws:consumer-config name="Web_Service_Consumer" wsdlLocation="http://tshirt-service.cloudhub.io/?wsdl" service="TshirtServicePortTypeService" port="TshirtServicePortTypePort" serviceAddress="http://tshirt-service.cloudhub.io/" doc:name="Web Service Consumer"/>

  <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>

    <flow name="orderTshirt" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="orders" doc:name="HTTP">
            <http:response-builder statusCode="200"/>
        </http:listener>
        <set-variable variableName="apiKey" value="#['abc12345']" doc:name="Set API Key"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:input-variable doc:sample="string.dwl" variableName="apiKey"/>
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://mulesoft.org/tshirt-service
---
{
    ns0#OrderTshirt: {
        size: payload.size,
        email: payload.email,
        name: payload.name,
        address1: payload.address1,
        address2: payload.address2,
        city: payload.city,
        stateOrProvince: payload.state,
        postalCode: payload.postal,
        country: payload.country
    }
}]]></dw:set-payload>
    <dw:set-property propertyName="soap.header"><![CDATA[%dw 1.0
%output application/java
---
flowVars.apiKey]]></dw:set-property>
        </dw:transform-message>
        <ws:consumer config-ref="Web_Service_Consumer" operation="OrderTshirt" doc:name="Order Tshirt"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/json
---
payload]]></dw:set-payload>
        </dw:transform-message>
    </flow>
 
    <flow name="listInventory" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="inventory" doc:name="HTTP">
            <http:response-builder statusCode="200"/>
        </http:listener>
        <ws:consumer config-ref="Web_Service_Consumer" operation="ListInventory" doc:name="List Inventory"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
}]]></dw:set-payload>
        </dw:transform-message>
    </flow>
</mule>
----


== 另请参阅

* 详细了解如何使用 link:/mule-user-guide/v/3.9/dataweave[DataWeave变压器]。
* 了解如何使用 link:/apikit[APIkit]在Mule中发布REST API。
* 访问 link:/getting-started/[入门]以了解基本知识。
